versión funcional API

--- a/app/models/probar_bbdd.ipynb
+++ b/app/models/probar_bbdd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -63,27 +63,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "create_db = '''CREATE DATABASE country_database'''\n",
-    "cursor.execute(create_db)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -93,32 +72,35 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "drop_db = '''DROP DATABASE country_database'''\n",
-    "cursor.execute(drop_db)"
+    "# create_db = '''CREATE DATABASE country_database'''\n",
+    "# cursor.execute(create_db)\n",
+    "\n",
+    "# drop_db = '''DROP DATABASE country_database'''\n",
+    "# cursor.execute(drop_db)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Database': 'country_database'},\n",
+       "[{'Database': 'WordPlay'},\n",
        " {'Database': 'information_schema'},\n",
        " {'Database': 'mysql'},\n",
        " {'Database': 'performance_schema'},\n",
        " {'Database': 'sys'}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,6 +109,133 @@
     "cursor.execute('SHOW DATABASES')\n",
     "cursor.fetchall()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.connection.commit()\n",
+    "use_db = ''' USE WordPlay'''\n",
+    "cursor.execute(use_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Tables_in_WordPlay': 'word_learned_table'},\n",
+       " {'Tables_in_WordPlay': 'word_new_table'}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(\"SHOW TABLES\")\n",
+    "\n",
+    "# Obtener todos los resultados (nombres de las tablas)\n",
+    "tables = cursor.fetchall()\n",
+    "tables\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "insert_data = '''\n",
+    "INSERT INTO word_new_table (word)\n",
+    "VALUES ('XXX')\n",
+    "'''\n",
+    "cursor.execute(insert_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1, 'word': 'hello2'}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = '''SELECT * FROM word_new_table'''\n",
+    "cursor.execute(sql)\n",
+    "mi_lista = cursor.fetchall()\n",
+    "mi_lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 10, 'word': 'hello jaja'},\n",
+       " {'id': 12, 'word': 'hello2 jaja'},\n",
+       " {'id': 8, 'word': 'hellojaja'},\n",
+       " {'id': 17, 'word': 'XXX'}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = '''SELECT * FROM word_learned_table'''\n",
+    "cursor.execute(sql)\n",
+    "mi_lista = cursor.fetchall()\n",
+    "mi_lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
